# sphinxBetterBlocks

./: LICENSE  README.md  betterBlocks.py  pyproject.toml
.github/workflows/: publish.yml
src/sphinxbetterblocks/: __init__.py
src/sphinxbetterblocks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sphinxbetterblocks/static/: custom.css
